--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,7 @@
 <style>
 body {
 	padding: 0;
-	background: url("/static/background.jpg")
-	no-repeat;
+	background: url('/static/background.jpg') no-repeat;
 	background-size: cover;
 	background-color: #b6b6ba;
 	background-blend-mode: multiply;
