Back to original version

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@ body {
 	padding: 0;
 	background: url('/static/background.jpg') no-repeat;
 	background-size: cover;
-	background-color: #b6b6ba;
+	background-color: #939396;
 	background-blend-mode: multiply;
 }
 h1{
@@ -27,7 +27,7 @@ h2{
 .buzz{
 	color: #000;
 	font-family: 'Work+Sans';
-	font-size: 48px;
+	font-size: 40px;
 }
 
 div.buzz{
@@ -35,7 +35,7 @@ div.buzz{
    margin: 0 auto; 
    text-align: center; 
    position: relative; 
-   top: 15%;
+   top: 10%;
 }
 
 </style>
